# craftcpp

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  Taskfile.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  conda.yml  pip.yml
craftpy/: __init__.py  auto_base.py  crafter_base.py  finisher_pattern.py  ingame_crafter.py  simcrafter.py  utils.py
src/: Action.hpp  Condition.hpp  CraftInfo.hpp  CrafterCore.cpp  CrafterCore.hpp  Finisher.cpp  Finisher.hpp  State.cpp  State.hpp  StatusEffect.hpp  cexpr_map.hpp  magic_enum.hpp  main.cpp  py_main.cpp  random.hpp
test/: test_basic.py
tests/: test_basic.py
